@@ -78,6 +78,7 @@ if (WIN32)
 elseif (APPLE)
     set(ENABLE_QT5 ON)
     set(MACOSX_BUNDLE_BUNDLE_NAME Cantata)
+    set(MACOSX_BUNDLE_EXECUTABLE cantata)
     set(MACOSX_BUNDLE_SHORT_VERSION_STRING ${CANTATA_VERSION})
     set(MACOSX_BUNDLE_VERSION ${CANTATA_VERSION})
     set(MACOSX_BUNDLE_LONG_VERSION_STRING ${CANTATA_VERSION_WITH_SPIN})
